Changelog
=========

1.0b14 - Unreleased
-------------------

* Remove relevance information from search results as they don't make sense
  to the user.
  [witsch]


1.0b13 - Released August 20, 2009
---------------------------------

* Fix `reindex` and `catalogSync` maintenance views to not pass invalid data
  back to Solr when indexing an explicit list of attributes.
  [witsch]


1.0b12 - Released August 15, 2009
---------------------------------

* Fix `reindex` maintenance view to keep any existing data when indexing a
  given list of attributes.
  [witsch]

* Add support for facet dependencies: Specifying a facet "foo" like "foo:bar"
  only makes it show up when a value for "bar" has been previously selected.
  [witsch]

* Allow indexer methods to raise `AttributeError` to prevent an attribute
  from being indexed.
  [witsch]


1.0b11 - Released July 2, 2009
------------------------------

* Fix maintenance view for adding/syncing single indexes using catalog data.
  [witsch]

* Allow to configure query parameters for which filter queries should be
  used (see http://wiki.apache.org/solr/FilterQueryGuidance for more info)
  [fschulze, witsch]

* Encode unicode strings when building facet links.
  [fschulze, witsch]

* Fix facet display to try to keep the given order of facets.
  [witsch]

* Allow facet values to be translated.
  [witsch]


1.0b10 - Released June 11, 2009
-------------------------------

* Range queries must not be quoted with the new query parser.
  [witsch]

* Disable socket timeouts during maintenance tasks.
  [witsch]

* Close the response object after searching in order to avoid
  `ResponseNotReady` errors triggering duplicate queries.
  [witsch]

* Use proper way of accessing jQuery & fix IE6 syntax error.
  [fschulze]

* Format relevance value for search results.
  [witsch]


1.0b9 - Released May 12, 2009
-----------------------------

* Add safety net for using a translation map on unicode strings.