@@ -16,6 +16,7 @@ port = 8983
 basepath = /solr
 max-num-results = 100
 default-search-field = default
+default-operator = and
 unique-key = UID
 index =
     name:UID              type:string stored:true required:true
